--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 
 <html>
 
-<head></head>
+<head>
+<script type="text/javascript">
+<!--
+window.location = "/blog/"
+//-->
+</script>
+</head>
 <body></body>
 
 </html>
